# big_project

./: .gitignore  Brain Atlas Indices  Pipeline.ipynb  README.md  anatomy_atlas_visualizer.py  big_project_daniil.ipynb  fmri-emotion-analysis.code-workspace  main.py  my_project.code-workspace  pyproject.toml  testing.py
