[build-system]
requires = ["setuptools>=68", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "fmri-emotion-analysis"
requires-python = ">=3.12"
version = "1.0"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "nilearn>=0.10.3",  # for fMRI analysis
    "nibabel>=5.2.0",   # for neuroimaging file handling
    "matplotlib>=3.8.0",
    "scipy>=1.12.0"
]

[project.optional-dependencies]
dev = [
    "fmri-emotion-analysis[lint]",
    "fmri-emotion-analysis[test]",
    "fmri-emotion-analysis[build]",
]
lint = [
    "ruff>=0.2.0",
]
test = [
    "tox>=4.12.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "coverage[toml]>=7.4.0",
    "pytest-html>=4.1.1"
]
build = [
    "build>=1.0.3",
]

[tool.ruff]
line-length = 120
src = ["src"]
extend-exclude = [
    "conf.py",
]
target-version = "py312"
lint.select = ["ALL"]
lint.ignore = [
    "COM812",   # Conflicts with the formatter
    "ISC001",   # Conflicts with the formatter
    "ANN101",   # "missing-type-self"
    "PT001",    # pytest fixture related
    "PT004",    # pytest fixture related
    "PT005",    # pytest fixture related
    "PT023",    # pytest fixture related
    "D415",     # Docstring can end without ./!
    "D416",     # Docstring Return can end without :
    "E402",     # Module level import not at top of file (common in notebooks)
    "E731",     # Lambda assignments (common in data science)
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = [
    "S101", # Use of `assert` detected
    "D103", # Missing docstring in public function
]
"**/__init__.py" = [
    "F401", # Imported but unused
    "F403", # Wildcard imports
    "D104", # No need to doc this file
]
"docs/**" = [
    "INP001",   # Requires __init__.py but docs folder is not a package.
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`(https://github.com/astral-sh/ruff/issues/5434)
keep-runtime-typing = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
disallow_untyped_defs = true # Functions need to be annotated
warn_unused_ignores = true
ignore_missing_imports = true
exclude = [
    "my-project-\\d+", # Ignore temporary folder created by setuptools when building a sdist
    "venv.*/",
    "build/",
    "dist/",
]

